--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,6 @@
 
 
-@import url('https://fonts.googleapis.com/css?family=Amiri|Ramaraja|Work+Sans|Yrsa');
+@import url('https://fonts.googleapis.com/css?family=Amiri|Lato|Ramaraja|Work+Sans|Yrsa');
 
 * {
     margin: 0;
@@ -252,4 +252,11 @@ span.font_slider_comment {
     color: #555963;
     font-size: 23pt;
     line-height: 32pt;
+}
+span.fontmenu {
+    font-family: 'Lato', sans-serif;
+    font-size: 14pt;
+    font-weight: bold;
+    line-height: 37.46pt;
+
 }
