--- a/css/style.css
+++ b/css/style.css
@@ -310,3 +310,31 @@ span.bookworm {
     font-size: 29pt;
     line-height: 37.46pt;
 }
+span.all_books {
+    font-family: 'Lato', sans-serif;
+    font-size: 16pt;
+    line-height: 32pt;
+}
+span.literature_vote {
+    font-family: "Work Sans";
+    font-size: 16pt;
+    line-height: 58pt;
+    color: #555963;
+}
+span.font_comment {
+    font-family: 'Ramaraja', serif;
+    font-size: 21pt;
+    line-height: 23pt;
+    color: #555963;
+}
+span.font_comment_text {
+    font-family: 'Yrsa', serif;
+    font-size: 21pt;
+    line-height: 29pt;
+    color: #555963;
+}
+span.writer_page {
+    font-family: 'Lato', sans-serif;
+    font-size: 16pt;
+    line-height: 29pt;
+}
