--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,6 @@
 
 
-@import url('https://fonts.googleapis.com/css?family=Amiri|Lato|Ramaraja|Rozha+One|Work+Sans|Yrsa');
+@import url('https://fonts.googleapis.com/css?family=Amiri|Lato|Ramaraja|Rozha+One|PT+Serif|Work+Sans|Yrsa');
 
 * {
     margin: 0;
@@ -44,12 +44,7 @@ nav {
 
 }
 
-.menublock1 {
-    float: left;
-}
-.menublock2 {
-    float: left;
-}
+
 
 
 ul li {
@@ -337,4 +332,12 @@ span.writer_page {
     font-family: 'Lato', sans-serif;
     font-size: 16pt;
     line-height: 29pt;
+}
+span.fontcaption_text {
+    font-family: 'PT Serif', serif;
+    font-size: 17pt;
+    font-weight: bold;
+    line-height: 29pt;
+    color: #555963;
+    font-style: italic;
 }
