--- a/css/style.css
+++ b/css/style.css
@@ -235,123 +235,123 @@ span.fontcaption_orange {
 span.font_slider_grey {
     display: inherit;
     text-align: left;
-    line-height: 58pt;
+    line-height: 58px;
     font-family: 'Ramaraja', serif;
     color: #555963;
-    font-size: 57pt;
+    font-size: 57px;
 }
 span.font_slider_orange {
     font-family: 'Amiri', serif;
-    font-size: 21pt;
-    line-height: 58pt;
+    font-size: 21px;
+    line-height: 58px;
     color: #da8913;
 }
 span.font_slider_vote {
     font-family: 'Work Sans', sans-serif;
     color: #555963;
-    font-size: 17pt;
+    font-size: 17px;
 }
 span.font_slider_comment {
     font-family: 'Yrsa', serif;
     color: #555963;
-    font-size: 23pt;
-    line-height: 32pt;
+    font-size: 23px;
+    line-height: 32px;
 }
 span.fontmenu {
     font-family: 'Lato', sans-serif;
-    font-size: 14pt;
+    font-size: 14px;
     font-weight: bold;
-    line-height: 37.46pt;
+    line-height: 37.46px;
 
 }
 span.font_vote {
     font-family: 'Work Sans', sans-serif;
-    font-size: 15pt;
-    line-height: 58pt;
+    font-size: 15px;
+    line-height: 58px;
     color: #555963;
 }
 span.header {
     font-family: 'Ramaraja', serif;
-    font-size: 42pt;
-    line-height: 32pt;
+    font-size: 42px;
+    line-height: 32px;
     color: #555963;
 }
 span.font_yrsa {
     display: block;
     margin-top: 50px;
     font-family: 'Yrsa', serif;
-    font-size: 38pt;
-    line-height: 32pt;
+    font-size: 38px;
+    line-height: 32px;
     color: #555963;
 }
 span.font_menu {
     font-family: 'Lato', sans-serif;
-    font-size: 16pt;
+    font-size: 16px;
     line-height: 32p;
 }
 span.books_font_grey {
     font-family: 'Ramaraja', serif;
-    font-size: 21pt;
-    line-height: 30pt;
+    font-size: 21px;
+    line-height: 30px;
     color: #555963;
 }
 span.books_font_orange {
     font-family: 'Amiri', serif;
-    font-size: 16pt;
-    line-height: 30pt;
+    font-size: 16px;
+    line-height: 30px;
     color: #dd9327;
 }
 span.aboutliterature {
     font-family: 'Lato', sans-serif;
-    font-size: 11pt;
-    line-height: 37.46pt;
+    font-size: 11px;
+    line-height: 37.46px;
 }
 span.bookworm {
     font-family: 'Rozha One', serif;
-    font-size: 29pt;
-    line-height: 37.46pt;
+    font-size: 29px;
+    line-height: 37.46px;
 }
 span.all_books {
     font-family: 'Lato', sans-serif;
-    font-size: 16pt;
-    line-height: 32pt;
+    font-size: 16px;
+    line-height: 32px;
 }
 span.literature_vote {
     font-family: "Work Sans";
-    font-size: 16pt;
-    line-height: 58pt;
+    font-size: 16px;
+    line-height: 58px;
     color: #555963;
 }
 span.font_comment {
     font-family: 'Ramaraja', serif;
-    font-size: 21pt;
-    line-height: 23pt;
+    font-size: 21px;
+    line-height: 23px;
     color: #555963;
 }
 span.font_comment_text {
     font-family: 'Yrsa', serif;
-    font-size: 21pt;
-    line-height: 29pt;
+    font-size: 21px;
+    line-height: 29px;
     color: #555963;
 }
 span.writer_page {
     font-family: 'Lato', sans-serif;
-    font-size: 16pt;
-    line-height: 29pt;
+    font-size: 16px;
+    line-height: 29px;
 }
 span.fontcaption_text {
     font-family: 'PT Serif', serif;
-    font-size: 17pt;
+    font-size: 17px;
     font-weight: bold;
-    line-height: 29pt;
+    line-height: 29px;
     color: #555963;
     font-style: italic;
 }
 span.fontcaption_grey {
     font-family: 'Lato', sans-serif;
-    font-size: 13pt;
+    font-size: 13px;
     color: #bfbfbf;
-    line-height: 22pt;
+    line-height: 22px;
 }
 .slide_info {
     min-width: 1060px;
@@ -371,8 +371,8 @@ span.fontcaption_grey {
 span.text_info {
     font-family: 'Yrsa', serif;
     color: #555963;
-    line-height: 29pt;
-    font-size: 21pt;
+    line-height: 29px;
+    font-size: 21px;
 }
 span.slide_block1 {
     float: left;
