--- a/css/style.css
+++ b/css/style.css
@@ -7,9 +7,6 @@
     padding: 0;
 }
 
-
-
-
 html {
     width: 100%;
 }
@@ -19,10 +16,9 @@ body {
 }
 
 .container {
-    max-width: 960px;
+    width: 960px;
     margin: 0 auto;
-    padding-right: 15px;
-    padding-left: 15px;
+
 }
 .container button {
     text-align: center;
@@ -99,38 +95,66 @@ a:active {
 }
 .bookslide {
     margin: 0 auto;
-    width: 80%;
-   background-color: #f2fdff;
+    width: 100%;
+    background-color: #f2fdff;
     height: 679px;
 }
 
 .bookschoice {
+    width: 40%;
     float: left;
     display: block;
 }
 .booktext {
     display: block;
     float: right;
-    width: 604px;
+    width: 40%;
     height: 700px;
 
 }
+.presentation_book {
+width: 100%
+}
 
-
+.wraper_books {
+width: 100%;
+}
 
 .presentation_book1 {
-    width: 30%;
+    width: 44%;
     background-color: #f1fdff;
-    float: left;
     font-size: 1.5em;
+    float: left;
+
 }
+
+
 .presentation_book2 {
-    width: 30%;
+    width: 44%;
     background-color: #f1fdff;
     font-size: 1.5em;
     float: right;
 
 }
+.container_button {
+    text-align: center;
+}
+a.button7 {
+    text-align: center;
+    font-weight: 700;
+    color: white;
+    text-decoration: none;
+    padding: .8em 1em calc(.8em + 3px);
+    border: 2px solid;
+    background: rgb(64,199,129);
+    box-shadow: 0 -3px rgb(53,167,110) inset;
+    transition: 0.2s;
+}
+a.button7:hover { background: rgb(53, 167, 110); }
+a.button7:active { background: black; }
+
+
+
 .shopfrontmenu {
 
 }
@@ -172,13 +196,26 @@ a:active {
 .button {
     text-align: center;
 }
+.procent {
+    margin: 0 auto;
+    width: 70%;
+}
 .discount {
     background-image: url("images/books.png");
     width: 1134px;
     height: 908px;
 }
-#literature_writes {
-    padding-top: 60px;
+.block_discount {
+    width: 31%;
+    float: left;
+
+}
+.literature_writes {
+    width: 100%;
+
+}
+.literature_books p {
+    text-align: center;
 }
 .literaturenews {
     float: left;
@@ -187,7 +224,7 @@ a:active {
     width: 300px;
 }
 .literature_news_autor {
-    margin: 10 px 10px;
+    margin: 10px 10px;
     float: left;
 }
 .popularseries p {
@@ -209,12 +246,18 @@ h1 {
 }
 .comment1 {
     padding: 10px;
-    width: 200px;
+    width: 25%;
     float: left;
 }
-.comment {
+.comment2 {
+
+
+    float: left;
+}
+
+.comment3 {
     padding: 10px;
-    width: 300px;
+    width: 35%;
     float: left;
 }
 
@@ -222,23 +265,43 @@ h1 {
 /* fonts used in html */
 span.fontcaption {
     font-family: 'Ramaraja', serif;
-    font-size: 28pt;
+    font-size: 28px;
     color: #555963;
-    line-height: 30pt;
-}
-span.fontcaption_orange {
-    font-family: 'Amiri', serif;
-    font-size: 18pt;
-    line-height: 22pt;
-    color: #eaad54;
+    line-height: 30px;
 }
 span.font_slider_grey {
+    font-family: 'Ramaraja', serif;
     display: inherit;
     text-align: left;
     line-height: 58px;
-    font-family: 'Ramaraja', serif;
     color: #555963;
     font-size: 57px;
+}
+span.book_series_fonts {
+    font-family: 'Ramaraja', serif;
+    font-size: 23px;
+    line-height: 23px;
+    color: #555963;
+}
+.popwrites_header p {
+    text-align: center;
+}
+.popwrites {
+width: 100%;
+}
+
+span.header {
+    font-family: 'Ramaraja', serif;
+    font-size: 42px;
+    line-height: 32px;
+    color: #555963;
+}
+/* ---- font amiri --- */
+span.fontcaption_orange {
+    font-family: 'Amiri', serif;
+    font-size: 18px;
+    line-height: 22px;
+    color: #eaad54;
 }
 span.font_slider_orange {
     font-family: 'Amiri', serif;
@@ -246,11 +309,22 @@ span.font_slider_orange {
     line-height: 58px;
     color: #da8913;
 }
+
+
 span.font_slider_vote {
     font-family: 'Work Sans', sans-serif;
     color: #555963;
     font-size: 17px;
+    font-weight: bold;
 }
+
+span.font_vote {
+    font-family: 'Work Sans', sans-serif;
+    font-size: 15px;
+    line-height: 58px;
+    color: #555963;
+}
+
 span.font_slider_comment {
     font-family: 'Yrsa', serif;
     color: #555963;
@@ -264,18 +338,7 @@ span.fontmenu {
     line-height: 37.46px;
 
 }
-span.font_vote {
-    font-family: 'Work Sans', sans-serif;
-    font-size: 15px;
-    line-height: 58px;
-    color: #555963;
-}
-span.header {
-    font-family: 'Ramaraja', serif;
-    font-size: 42px;
-    line-height: 32px;
-    color: #555963;
-}
+
 span.font_yrsa {
     display: block;
     margin-top: 50px;
@@ -287,7 +350,7 @@ span.font_yrsa {
 span.font_menu {
     font-family: 'Lato', sans-serif;
     font-size: 16px;
-    line-height: 32p;
+    line-height: 32px;
 }
 span.books_font_grey {
     font-family: 'Ramaraja', serif;
@@ -353,6 +416,13 @@ span.fontcaption_grey {
     color: #bfbfbf;
     line-height: 22px;
 }
+span.text_info {
+    font-family: 'Yrsa', serif;
+    color: #555963;
+    line-height: 29px;
+    font-size: 21px;
+}
+
 .slide_info {
     min-width: 1060px;
     margin: 0 auto;
@@ -366,18 +436,102 @@ span.fontcaption_grey {
 }
 .button_all_news {
     text-align: center;
-    display: inline-block;
+
 }
-span.text_info {
-    font-family: 'Yrsa', serif;
-    color: #555963;
-    line-height: 29px;
-    font-size: 21px;
+
+.slider_block {
+    width: 100%;
 }
-span.slide_block1 {
+
+.container_wrap {
+    background-color: #f7fdff;
+    width: 100%;
+    margin-top: 40px;
+    margin-bottom: 60px;
+}
+
+.slide_block1 {
+    width: 68%;
     float: left;
+}
+.slide_block2 {
+
+    float: left;
+}
+.slide_block3 {
+    background-color: #f7fdff;
+    width: 32%;
+    float: right;
+    box-sizing: border-box;
 }
 .popular_series {
     margin: 30px 0;
     text-align: center;
+}
+
+
+.background_books {
+    background-image: url("../img/Bitmap.png");
+    background-repeat: repeat;
+    padding: 80px 40px 40px 40px;
+}
+.discount p {
+    padding-top: 20px;
+}
+.discount {
+    width: 600px;
+    text-align: center;
+    background-color: white;
+    height: 340px;
+    margin: 0 auto;
+}
+
+
+.clearfix {
+    clear: both;
+}
+.clearfix-visible {
+    content: "";
+    display: table;
+    clear: both;
+    width: 100%;
+    height: 10px;
+}
+.container_slider {
+width: 1060px;
+}
+
+.book_1 {
+    float: left;
+}
+.publishers {
+    margin: 80px auto;
+    width: 100%;
+}
+.description p {
+    text-align: left;
+}
+.description {
+    float: left;
+    width: 30%;
+}
+.partners {
+    float: right;
+    width: 70%;
+}
+
+.partners_block {
+    float: left;
+}
+
+.partners_block ul li {
+    padding: 10px 10px;
+    float: left;
+}
+.menu_futer {
+    height: 150px;
+    width: 100%;
+}
+.menu_futer ul li  {
+    margin: 20px 20px;
 }
