--- a/css/style.css
+++ b/css/style.css
@@ -15,40 +15,34 @@ body {
 
 }
 
-.container {
-    width: 960px;
+
+.container  {
+    width: 1210px;
     margin: 0 auto;
-
-}
-.container button {
-    text-align: center;
-
-}
-nav {
-    padding-top: 30px;
 }
 .wrap {
-    margin: 0 auto;
+    margin-top: 20px;
+    margin-bottom: 100px;
     height: 150px;
-    background-color: #f2fdff;
+    background-color: #f2fdff;}
+
+.container button {
+    text-align: center;
 }
+
+
+
 .menu {
     box-shadow: 0 0 10px rgba(0,0,0,0.5);
-    padding-top: 15px;
     background-color: white;
-    height: 70px;
-
+    height: 93px;
 }
-
-
-
 
 ul li {
     display:inline;
     float: left;
 }
 .menuimg {
-
     text-align: center;
 }
 .popular {
