--- a/css/style.css
+++ b/css/style.css
@@ -45,23 +45,49 @@ ul li {
     margin-bottom: 60px;
 }
 
-.block1 {
+.menu_logo {
+    margin: 20px 0 0 35px;
+    background-image: url("../img/Logo.png");
+    width: 211px;
+    height: 56px;
     float: left;
-    padding: 19px 15px 15px 35px;
+    padding: 19px 60px 15px 35px;
+    background-repeat: no-repeat;
 }
-.block2 ul li a {
 
-
+.menu_list ul li a {
     padding: 0 23px 0 21px;
 }
 
-.block2 {
-
+.menu_list {
+    margin-top: 30px;
     float: left;
 }
-.block3 {
+.search {
+    background-image: url("../img/icons_svg/search.svg");
+    width: 23px;
+    height: 23px;
+}
+.shoppingcart {
+    background-image: url("../img/icons_svg/shoppingcart.svg");
+    width: 22px;
+    height: 20px;
+}
+.userpic {
+    margin-bottom: 15px;
+    background-image: url("../img/Userpic.png");
+    width: 39px;
+    height: 39px;
+    background-repeat: no-repeat;
+}
+.pagination {
+    padding: 25px 17px 0 0;
     float: right;
 }
+
+.pagination ul li{
+    padding: 16px;
+   }
 
 a:link {
     color: black;
@@ -88,11 +114,12 @@ a:active {
 }
 .bookslide {
     height: 831px;
+    margin-top: 64px;
 }
 .img_Harry {
     position: absolute;
-    padding-top: 121px;
-    padding-left: 68px;
+    padding-top: 116px;
+    padding-left: 78px;
   }
 .img_hogwarts {
     padding-top: 50px;
@@ -116,7 +143,7 @@ a:active {
     position: relative ;
     width: 50%;
     float: left;
-    margin-left: -253px;
+    margin-left: 100px;
 }
 
 .booktext {
