--- a/css/style.css
+++ b/css/style.css
@@ -61,8 +61,9 @@ ul li {
     background-repeat: no-repeat;
 }
 
-.menu_list ul li a {
+.menu_list li a {
     padding: 0 23px 0 21px;
+    text-transform: uppercase;
 }
 
 .menu_list {
@@ -86,12 +87,12 @@ ul li {
     height: 39px;
     background-repeat: no-repeat;
 }
-.pagination {
+.info_boks {
     padding: 25px 17px 0 0;
     float: right;
 }
 
-.pagination ul li{
+.info_boks li{
     padding: 16px;
    }
 
@@ -122,10 +123,11 @@ a:active {
     height: 831px;
     padding: 240px 0 0 0;
 }
-.img_Harry {
+.img_slider {
     position: absolute;
-    padding-top: 116px;
+    padding-top: 65px;
     padding-left: 78px;
+    z-index: 5;
   }
 .img_hogwarts {
     padding-top: 50px;
@@ -143,6 +145,11 @@ a:active {
     border: solid 2px #ffbb58;
     background-color: white;
     overflow: hidden;
+}
+
+.img_cover img {
+    opacity: 0.45;
+    z-index: 2;
 }
 
 .bookschoice {
@@ -179,7 +186,7 @@ width: 100%;
     width: 235px;
 }
 
-.presentation_book img {
+.presentation_book_img {
     right: 34px;
     position: absolute;
     bottom: -18px;
