--- a/css/style.css
+++ b/css/style.css
@@ -33,6 +33,7 @@ body {
     text-align: center;
 }
 .menu {
+
     top: 15px;
     left: 100px;
     right: 100px;
@@ -59,7 +60,7 @@ ul li {
 .menu_logo {
     margin: 20px 0 0 35px;
     background-image: url("../img/Logo.png");
-    width: 211px;
+    width: 15%;
     height: 56px;
     float: left;
     padding: 19px 60px 15px 35px;
@@ -67,9 +68,8 @@ ul li {
 }
 
 .menu_list li a {
-    padding: 0 23px 0 21px;
-    text-transform: uppercase;
-    color: #45474b;
+    padding: 0 20px 0 20px;
+
 }
 
 .menu_list li a:hover {
@@ -77,14 +77,16 @@ ul li {
 }
 
 .menu_list {
+    text-transform: uppercase;
+    color: #45474b;
+    width: auto;
     font-family: 'Lato', sans-serif;
     font-size: 14px;
     font-weight: bold;
-    line-height: 37px;
-    margin-top: 30px;
+    margin-top: 2.5%;
     float: left;
-
 }
+
 .search {
     background-image: url("../img/icons_svg/search.svg");
     width: 23px;
@@ -103,12 +105,13 @@ ul li {
     background-repeat: no-repeat;
 }
 .info_boks {
-    padding: 25px 17px 0 0;
+    width: 185px;
+    padding: 1.5% 3% 1% 1%;
     float: right;
 }
 
 .info_boks li{
-    padding: 16px;
+    padding: 9%;
    }
 
 a:link {
@@ -189,7 +192,9 @@ a:active {
     padding: 0 20px 0 0;
 }
 .presentation_books {
-width: 100%;
+    width: 1210px;
+    margin-right: auto;
+    margin-left: auto;
 }
 
 .wraper_books {
@@ -197,23 +202,36 @@ width: 100%;
 }
 
 .presentation_book {
-    width: 45%;
-    height: 215px;
-    position: relative;
+     width: 48%;
+     position: relative;
+     font-size: 1.5em;
+     float: left;
+     padding: 0 10px;
+     box-sizing: border-box;
+     margin-left: 10px;
+     margin-right: 10px;
+ }
+.presentation_book::before{
+    content: "";
+    width: 100%;
+    height: 80%;
+    position: absolute;
     background-color: #f1fdff;
-    font-size: 1.5em;
-    float: left;
-    margin: 0 25px 0 25px;
+    z-index: -1;
+    top: 50%;
+    transform: translateY(-50%);
 }
+
 .presentation_text {
     float: left;
-    width: 55%;
+    width: 50%;
     margin: 35px 10px 35px 35px;
 }
 
 .presentation_book_img {
+    height: auto;
     right: 34px;
-    position: absolute;
+    position: relative;
     bottom: -18px;
 }
 
@@ -270,15 +288,23 @@ a.btn:active { background: white; }
     display: inline;
 }
 .books {
+    margin: 0 auto;
     float: left;
     min-width: 650px;
 }
+.books li:nth-child(1) {
+    padding: 42px 31px 0 0;
+}
+.books li:nth-child(6) {
+    padding: 42px 0 0 31px;
+}
+
 .books ul li  {
     width: 150px;
     float: left;
-    padding: 42px 42px 0 9px;
-}
+    padding: 42px 31px 0 31px;
 
+}
 .clearfix {
     clear: both;
 }
@@ -457,8 +483,7 @@ h2 {
     color: #555963;
     line-height: 30px;
 }
-span.fontcaption_orange {
-    width: 60%;
+.fontcaption_orange {
     font-family: 'Amiri', serif;
     font-size: 18px;
     line-height: 22px;
@@ -804,7 +829,7 @@ width: 1060px;
 button[type=submit]:hover {
     border: none;
 }
-.subscribe {
+.subscribe_form {
     position: relative;
 }
 button.subscribe_button::after {
@@ -866,4 +891,3 @@ button[type=submit] {
 .footer_social {
     margin: 80px 0 0 0;
 }
-
